--- a/assets/css/componentes/container.css
+++ b/assets/css/componentes/container.css
@@ -1,4 +1,4 @@
-.hide {
+.ide {
     display: none;
 }
 
@@ -14,5 +14,11 @@
 .container__resultado--texto {
     display: flex;
     align-items: baseline;
+}
+
+.container__resultado-final {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
