Atualização do JS e separação de elementos e funções

--- a/assets/css/base/variaveis.css
+++ b/assets/css/base/variaveis.css
@@ -15,6 +15,7 @@
 
     --padding-vertical-padrao: 2rem;
     --padding-horizontal-padrao: 1.75rem;
+    --padding-horizontal-resultado: .75rem;
 
     --border-bottom-padrao: solid 1px #B7B9BE;
     --background-color-padrao: #004976;
