--- a/assets/css/componentes/resultado.css
+++ b/assets/css/componentes/resultado.css
@@ -1,7 +1,6 @@
-
-
 .texto__resultado--final {
     font-size: var(--fonte-tamanho-titulo-calculadora);
+    text-align: center;
 
     box-sizing: border-box;
 }
