--- a/assets/css/componentes/rodape.css
+++ b/assets/css/componentes/rodape.css
@@ -26,7 +26,6 @@
 }
 
 .lista__link--rodape {
-    width: 100%;
     display: flex;
     justify-content: space-evenly;
 }
@@ -48,10 +47,10 @@ li .link__contato {
     }
 
     .contato__container {    
-        grid-column: 2 / 6;
+        grid-column: 2 / 5;
 
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
     
         height: 100%;
