--- a/assets/css/base/variaveis.css
+++ b/assets/css/base/variaveis.css
@@ -21,6 +21,7 @@
     --background-color-padrao: #004976;
 
     --margin-vertical--botao: 2.25rem;
+    --margin-vertical--botao-menu: 1.75rem;
     --margin-menu: 1rem;
     --padding-menu: 1rem;
 }
