--- a/assets/css/componentes/botao.css
+++ b/assets/css/componentes/botao.css
@@ -37,3 +37,7 @@
     justify-content: center;
     align-items: center;
 }
+
+.botao__voltar--calculadora {
+    margin: var(--margin-vertical--botao-menu) 0;
+}
