Criação dos cálculos de Custo Fixo, Produtividade e Custo Fixo Unitário

--- a/assets/css/componentes/tabela.css
+++ b/assets/css/componentes/tabela.css
@@ -46,3 +46,12 @@ th {
     display: none;
 }
 
+.tabela__container--inputs{
+    display: flex;
+    flex-direction: column;
+}
+
+.tabela__input--erro{
+    color: var(--cor-vermelha);
+    text-align: center;
+}
