--- a/assets/css/componentes/formulario.css
+++ b/assets/css/componentes/formulario.css
@@ -46,7 +46,12 @@
 
 .container__total--parcial .input{
     border: none;
-    border-bottom: solid 1px var(--cor-borda);
+}
+
+.input--total{
+    border: none;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 @media screen and (min-width: 1024px){
