--- a/assets/css/componentes/resultado.css
+++ b/assets/css/componentes/resultado.css
@@ -15,8 +15,14 @@
     border-radius: 5px;
     box-sizing: border-box;
     font-family: var(--fonte-familia-padrao);
+    font-size: 1rem;
     height: 36px;
     margin-bottom: var(--margem-input);
+    text-align: center;
     width: 60%;
+}
+
+.input--resultado-final{
+    font-size: 1.5rem;
 }
 
