--- a/assets/css/base/reset.css
+++ b/assets/css/base/reset.css
@@ -69,6 +69,11 @@ input {
 	font-family: inherit;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+	-webkit-appearance: none;
+}
+
 textarea {
 	border: none;
 	color: inherit;
