Criando tabela e seção total parcial

--- a/src/components/CalculatorSection/CalculatorSection.module.scss
+++ b/src/components/CalculatorSection/CalculatorSection.module.scss
@@ -3,7 +3,7 @@
   border-radius: 8px;
   box-sizing: border-box;
   grid-area: main;
-  padding: 0 16px;
+  padding: 0 32px 32px;
 
   article{
     border-bottom: solid 1px #F1F1F1;
