--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,8 +5,9 @@
   display: flex;
   height: 36px;
   justify-content: center;
+  margin: 64px auto;
   text-decoration: none;
-  width: 100%;
+  width: 288px;
 }
 
 .button__primary{
